[gd_scene load_steps=33 format=3 uid="uid://cdu6hjoweee6s"]

[ext_resource type="Script" path="res://Level/playground.gd" id="1_fq8oi"]
[ext_resource type="PackedScene" uid="uid://cyv1v6g5srjk1" path="res://Enemies/DemoEnemy/DemoEnemy.tscn" id="2_a863k"]
[ext_resource type="Script" path="res://00 Globals/enemies.gd" id="2_lmkum"]
[ext_resource type="Script" path="res://Enemies/EnemyData/enemy_spawn_data.gd" id="2_r03de"]
[ext_resource type="PackedScene" uid="uid://d0aswr8q0lpei" path="res://Level/Tiles.tscn" id="2_sm034"]
[ext_resource type="PackedScene" uid="uid://c2eppdxet4q8c" path="res://Enemies/DemoEnemy/DemoEnemyBoss.tscn" id="3_c8kbf"]
[ext_resource type="PackedScene" uid="uid://cdtin5d5lhmfi" path="res://Enemies/EvilBird/EvilBird.tscn" id="3_evq3g"]
[ext_resource type="PackedScene" uid="uid://cn76h3jplsrfn" path="res://Enemies/DemoEnemy/DemoEnemy2.tscn" id="3_qp6b5"]
[ext_resource type="PackedScene" uid="uid://bc36788hmae5b" path="res://Enemies/EvilBird/BlueBird.tscn" id="4_cffcb"]
[ext_resource type="PackedScene" uid="uid://bwkebvyfvvrv8" path="res://Enemies/DemoEnemy/DemoEnemyGold.tscn" id="4_kxj81"]
[ext_resource type="PackedScene" uid="uid://dqnds5n75tnpw" path="res://Enemies/DemoEnemy/DemoEnemyBoss2.tscn" id="4_udil8"]
[ext_resource type="PackedScene" uid="uid://c35yjtl5a8xob" path="res://Enemies/DemoEnemy/DemoEnemy3.tscn" id="5_xd300"]
[ext_resource type="Script" path="res://Level/Wave Data/wave_data.gd" id="7_wvqgp"]
[ext_resource type="Script" path="res://MainGame/current_money.gd" id="10_qool0"]
[ext_resource type="Texture2D" uid="uid://bd2ay8wp2mqjm" path="res://Level/Sprites/Mountain Background_1.jpeg" id="15_p7ivi"]

[sub_resource type="Resource" id="Resource_k715f"]
script = ExtResource("2_r03de")
enemy_name = "RedBird"
enemy = ExtResource("3_evq3g")
spawn_chance = 100

[sub_resource type="Resource" id="Resource_450uo"]
script = ExtResource("2_r03de")
enemy_name = "BlueBird"
enemy = ExtResource("4_cffcb")
spawn_chance = 0

[sub_resource type="Resource" id="Resource_j0euw"]
script = ExtResource("2_r03de")
enemy_name = "RedBoss"
enemy = ExtResource("3_c8kbf")
spawn_chance = 100

[sub_resource type="Resource" id="Resource_rmdxp"]
script = ExtResource("2_r03de")
enemy_name = "BlueBoss"
enemy = ExtResource("4_udil8")
spawn_chance = 100

[sub_resource type="Resource" id="Resource_17qqw"]
script = ExtResource("2_r03de")
enemy_name = "Gold"
enemy = ExtResource("4_kxj81")
spawn_chance = 100

[sub_resource type="Resource" id="Resource_cy7u7"]
script = ExtResource("2_r03de")
enemy_name = "RedTarget"
enemy = ExtResource("2_a863k")
spawn_chance = 100

[sub_resource type="Resource" id="Resource_s46cd"]
script = ExtResource("2_r03de")
enemy_name = "BlueTarget"
enemy = ExtResource("3_qp6b5")
spawn_chance = 0

[sub_resource type="Resource" id="Resource_a0m40"]
script = ExtResource("2_r03de")
enemy_name = "GreenTarget"
enemy = ExtResource("5_xd300")
spawn_chance = 0

[sub_resource type="Resource" id="Resource_s07r2"]
script = ExtResource("2_lmkum")
target_enemies = Array[ExtResource("2_r03de")]([SubResource("Resource_cy7u7"), SubResource("Resource_s46cd"), SubResource("Resource_a0m40")])
bird_enemies = Array[ExtResource("2_r03de")]([SubResource("Resource_k715f"), SubResource("Resource_450uo")])
boss_enemies = Array[ExtResource("2_r03de")]([SubResource("Resource_j0euw"), SubResource("Resource_rmdxp")])
rare_enemies = Array[ExtResource("2_r03de")]([SubResource("Resource_17qqw")])
spawn_time = 2.0

[sub_resource type="Resource" id="Resource_bnwpa"]
script = ExtResource("7_wvqgp")
current_wave = 1
targets_spawn = Array[int]([0, 0, 0])
bird_spawn = Array[int]([0, 0])
total_enemies = 10
spawn_time = 2.0
double_spawn_chance = 10.0
boss_wave = false

[sub_resource type="RectangleShape2D" id="RectangleShape2D_lvsqu"]
size = Vector2(10949, 44)

[sub_resource type="Animation" id="Animation_xyp2j"]
resource_name = "Gained"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.025, 0.025), Vector2(0.05, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(0, 0.25, 1, 1)]
}

[sub_resource type="Animation" id="Animation_klfvc"]
resource_name = "Gained10"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.025, 0.025), Vector2(0.05, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.25, 1, 1), Color(1, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_1e6g1"]
resource_name = "Gained25"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.025, 0.025), Vector2(0.05, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 0, 0, 1), Color(0.67451, 0.0392157, 0.8, 1)]
}

[sub_resource type="Animation" id="Animation_tq3ew"]
resource_name = "Lost"
length = 0.3
step = 0.05
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(0.025, 0.025), Vector2(0.05, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0.25, 1, 1), Color(1, 1, 1, 1)]
}

[sub_resource type="Animation" id="Animation_06wjn"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:scale")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0.05, 0.05)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_r47hq"]
_data = {
"Gained": SubResource("Animation_xyp2j"),
"Gained10": SubResource("Animation_klfvc"),
"Gained25": SubResource("Animation_1e6g1"),
"Lost": SubResource("Animation_tq3ew"),
"RESET": SubResource("Animation_06wjn")
}

[node name="PlayGround" type="Node2D"]
script = ExtResource("1_fq8oi")
enemies = SubResource("Resource_s07r2")
wave_data = SubResource("Resource_bnwpa")

[node name="Tiles" parent="." instance=ExtResource("2_sm034")]
tile_map_data = PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 255, 255, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 1, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0)

[node name="SummonTimer" type="Timer" parent="."]
wait_time = 3.0

[node name="HFlowContainer" type="HFlowContainer" parent="."]
offset_left = -30.0
offset_top = -95.0
offset_right = 1517.0
offset_bottom = 178.0
scale = Vector2(0.05, 0.05)

[node name="Label" type="Label" parent="HFlowContainer"]
z_index = -1
layout_mode = 2
theme_override_colors/font_color = Color(1, 1, 1, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 20
theme_override_constants/outline_size = 30
theme_override_constants/shadow_outline_size = 20
theme_override_font_sizes/font_size = 200
text = "Current Wave: 1"

[node name="FallingDeath" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="FallingDeath"]
position = Vector2(0, 150)
shape = SubResource("RectangleShape2D_lvsqu")
debug_color = Color(1, 0, 0.2, 0.419608)

[node name="CurrentMoney" type="Label" parent="."]
offset_left = -8.0
offset_top = -63.0
offset_right = 1125.0
offset_bottom = 142.0
scale = Vector2(0.05, 0.05)
theme_override_colors/font_color = Color(1, 0.8, 0, 1)
theme_override_colors/font_shadow_color = Color(0.76, 0.608, 0, 1)
theme_override_colors/font_outline_color = Color(0.54, 0.432, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 30
theme_override_font_sizes/font_size = 150
text = "Money:"
script = ExtResource("10_qool0")

[node name="Background" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.588235)
z_index = -3
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_p7ivi")

[node name="Background2" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.588235)
z_index = -3
position = Vector2(307, 0)
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_p7ivi")

[node name="Background3" type="Sprite2D" parent="."]
visible = false
modulate = Color(1, 1, 1, 0.588235)
z_index = -3
position = Vector2(-307, 0)
scale = Vector2(0.3, 0.3)
texture = ExtResource("15_p7ivi")

[node name="ComboCounter" type="Label" parent="."]
offset_left = -559.0
offset_top = -148.0
offset_right = 576.0
offset_bottom = 194.0
scale = Vector2(0.05, 0.05)
pivot_offset = Vector2(567, 171)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/shadow_offset_y = 15
theme_override_constants/outline_size = 35
theme_override_constants/shadow_outline_size = 35
theme_override_font_sizes/font_size = 250
text = "Combo: 0"

[node name="ComboAnimation" type="AnimationPlayer" parent="ComboCounter"]
libraries = {
"": SubResource("AnimationLibrary_r47hq")
}
